--- a/nextjs-chatbot/package.json
+++ b/nextjs-chatbot/package.json
@@ -15,6 +15,7 @@
     "@google/generative-ai": "^0.24.1",
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
+    "@supabase/supabase-js": "^2.55.0",
     "axios": "^1.6.2",
     "googleapis": "^155.0.1",
     "lucide-react": "^0.539.0",
