--- a/nextjs-chatbot/package.json
+++ b/nextjs-chatbot/package.json
@@ -23,7 +23,8 @@
     "openai": "^4.24.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-dropzone": "^14.2.3"
+    "react-dropzone": "^14.2.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^20",
