--- a/nextjs-chatbot/package.json
+++ b/nextjs-chatbot/package.json
@@ -18,6 +18,7 @@
     "@supabase/supabase-js": "^2.55.0",
     "axios": "^1.6.2",
     "googleapis": "^155.0.1",
+    "jotai": "^2.13.1",
     "lucide-react": "^0.539.0",
     "next": "14.0.4",
     "openai": "^4.24.1",
