--- a/nextjs-chatbot/package.json
+++ b/nextjs-chatbot/package.json
@@ -25,6 +25,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-hot-toast": "^2.6.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
