--- a/nextjs-chatbot/package.json
+++ b/nextjs-chatbot/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
     "@supabase/supabase-js": "^2.55.0",
+    "@types/react-datepicker": "^6.2.0",
     "axios": "^1.6.2",
     "googleapis": "^155.0.1",
     "jotai": "^2.13.1",
@@ -23,6 +24,7 @@
     "next": "14.0.4",
     "openai": "^4.24.1",
     "react": "^18",
+    "react-datepicker": "^8.7.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.6.0",
